<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <!-- Toolbar (AppBar) -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Imagem do perfil -->
    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/descriptionProfile"
        android:scaleType="centerCrop"
        android:src="@drawable/bl_account_circle"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Nome do usuário -->
    <TextView
        android:id="@+id/textProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameUser"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/imageProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Email do usuário -->
    <TextView
        android:id="@+id/textProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailUsuario"
        android:textSize="16sp"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textProfileName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Botão para editar o perfil -->
    <Button
        android:id="@+id/buttonEditProfile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/bt_editar_perfil"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/textProfileEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
