<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kyolili.socialcat.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" >
        <action
            android:id="@+id/action_navigation_home_to_postDetailFragment"
            app:destination="@id/postDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.kyolili.socialcat.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.kyolili.socialcat.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera">
        <action
            android:id="@+id/action_cameraFragment_to_previewFragment"
            app:destination="@id/previewFragment" />
    </fragment>

    <fragment
        android:id="@+id/previewFragment"
        android:name="com.kyolili.socialcat.ui.camera.PreviewFragment"
        android:label="Postar"
        tools:layout="@layout/fragment_preview">
        <argument
            android:name="imageUri"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/postDetailFragment"
        android:name="com.kyolili.socialcat.ui.feed.PostDetailFragment"
        android:label="Detalhes do Post"
        tools:layout="@layout/fragment_post_detail" >
        <argument
            android:name="username"
            app:argType="string" />
        <argument
            android:name="description"
            app:argType="string" />
        <argument
            android:name="time"
            app:argType="string" />
        <argument
            android:name="imageResId"
            app:argType="integer" />
    </fragment>


</navigation>